--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,3 +75,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # function is not used by application so for security reasons disable it
 spring.jpa.open-in-view=false
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kushagra@valuebound.com
+spring.mail.password=gxsskwsfgmoooadz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
