--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
             <version>13.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-mail</artifactId>
+</dependency>
+
     </dependencies>
 
     <build>
