--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,8 @@ spring.thymeleaf.encoding=UTF-8
 #Fixes encoding problem then loading lithuanian characters from file
 spring.datasource.sql-script-encoding=UTF-8
 
+spring.resources.static-locations=classpath:/static/
+
 # 7.1.5. Static Content
 # By default, resources are mapped on /**, but you can tune that with the spring.mvc.static-path-pattern property. For instance, relocating all resources to /resources/** can be achieved as follows:
 #spring.mvc.static-path-pattern=/**
@@ -84,3 +86,8 @@ spring.mail.password=gxsskwsfgmoooadz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+
+
+cloudinary.cloud_name=dqr4afmb7
+cloudinary.api_key=635249811597659
+cloudinary.api_secret=kPBMGv0zY318X3QInvBMKfrhQ3k
