--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,25 @@
 ### TomCat Web Server listening port
 server.port = 9080
 
-### H2 DataSource properties
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:mem:blog_database;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.url=jdbc:h2:~/test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.platform=h2
-spring.datasource.schema=classpath:/sql/schema.sql
-spring.datasource.data=classpath:/sql/data.sql
+# ### H2 DataSource properties
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2
+# spring.datasource.url=jdbc:h2:mem:blog_database;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+# #spring.datasource.url=jdbc:h2:~/test
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.datasource.platform=h2
+# spring.datasource.schema=classpath:/sql/schema.sql
+# spring.datasource.data=classpath:/sql/data.sql
 #spring.jpa.generate-ddl=false
+
+# Railway configurations:
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.username=root
+spring.datasource.password=TpWJgxxDhKqHqCCJtUjllErrFzfpRYCL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 spring.profiles.active=dev
 #spring.jpa.hibernate.ddl-auto=create-drop
