--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <version>1.36.0</version>
         </dependency>
         <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>8.0.33</version>
+            </dependency>
+
+        <dependency>
             <groupId>com.cloudinary</groupId>
             <artifactId>cloudinary-taglib</artifactId>
             <version>1.36.0</version>
@@ -98,6 +104,7 @@
             <artifactId>dotenv-java</artifactId>
             <version>2.2.4</version>
         </dependency>
+        
 
     </dependencies>
 
