current file latest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 ### TomCat Web Server listening port
 server.port = 9080
 
-# ### H2 DataSource properties
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2
-# spring.datasource.url=jdbc:h2:mem:blog_database;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-# #spring.datasource.url=jdbc:h2:~/test
-# spring.datasource.username=sa
-# spring.datasource.password=
-# spring.datasource.driver-class-name=org.h2.Driver
-# spring.datasource.platform=h2
-# spring.datasource.schema=classpath:/sql/schema.sql
-# spring.datasource.data=classpath:/sql/data.sql
-#spring.jpa.generate-ddl=false
+### H2 DataSource properties
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:blog_database;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.platform=h2
+spring.datasource.schema=classpath:/sql/schema.sql
+spring.datasource.data=classpath:/sql/data.sql
+spring.jpa.generate-ddl=false
 
 # Railway configurations:
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
-spring.datasource.username=root
-spring.datasource.password=TpWJgxxDhKqHqCCJtUjllErrFzfpRYCL
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+# spring.datasource.username=root
+# spring.datasource.password=TpWJgxxDhKqHqCCJtUjllErrFzfpRYCL
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 spring.profiles.active=dev
@@ -88,13 +88,13 @@ spring.jpa.open-in-view=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=kushagra@valuebound.com
-spring.mail.password=gxsskwsfgmoooadz
+spring.mail.username=jaiminiraunak30@gmail.com
+spring.mail.password=zvqwepwwjqcmugjs
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 
-
-cloudinary.cloud_name=dqr4afmb7
-cloudinary.api_key=635249811597659
-cloudinary.api_secret=kPBMGv0zY318X3QInvBMKfrhQ3k
+#cloudinary image storage
+cloudinary.cloud_name=dcrxyqbh5
+cloudinary.api_key=474721279968474
+cloudinary.api_secret=vLCvFmY7wRjGKgbDkkYnfG_3ERg
