--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ### TomCat Web Server listening port
-server.port = 9080
+server.port=${PORT:8080}
+
 
 ### H2 DataSource properties
 spring.h2.console.enabled=true
